# reduction_cout_logistique_vrp_rl

./: README.md  pyproject.toml  requirements.txt
notebooks/: 01_q_learning_cvrp_experiments.ipynb  02_pomo_active_search_cvrp_experiments.ipynb
results/: experiments.csv  masked_policy_rl_best_solution.json  rl_best_solution.json  summary_table.md
results/final/: experiments_detailed.csv  instance_summary.csv  method_summary.csv  tableau_memoire_resultats.csv
results/heuristics/: experiments_heuristics.csv
results/heuristics/routes/: A-n32-k5_heuristic_routes.json
results/pomo/: experiments_pomo.csv  pomo_best_table.csv  summary_pomo_by_seed.csv  training_metrics_pomo.csv
results/pomo/models/: A-n32-k5_pomo_style_seed_42.pt  A-n32-k5_pomo_style_seed_43.pt  A-n32-k5_pomo_style_seed_44.pt  (+12 more)
results/q_learning/: experiments_q_learning.csv  q_learning_agent_test.json  summary_q_learning_by_seed.csv  training_metrics_q_learning.csv
scripts/: 01_load_instance.py  02_nearest_neighbor_cvrp.py  04_clarke_wright.py  05_run_experiments.py  06_generate_charts.py  07_visualize_routes.py  08_test_rl_env.py  09_train_q_learning.py  09d_train_masked_policy_rl.py  12_masked_policy_rl_two_opt.py  3_nearest_neighbor_two_opt.py  aggregate_results.py  plot_heuristic_routes.py  run_heuristics.py  test_clarke_wright.py  test_nearest_neighbor.py  test_parser.py  test_q_learning_agent.py  test_rl_env.py  test_two_opt.py
src/cvrp/: core.py  data.py  paths.py  visualization.py
src/cvrp.egg-info/: PKG-INFO  SOURCES.txt
vrp_rl_memoire.egg-info/: PKG-INFO  SOURCES.txt
(+17 files in other folders)
